# ucode

./: .gitignore  AGENTS.md  OPENCODE_PLAN.md  README.md  mlflow.db  pyproject.toml  ucode-field-deck.html
.antigravitycli/: 8f06fdf0-e411-408f-99f1-0d66a1438780.json
.claude/rules/: Reasoning.md  production-ready-code.md  testing.md
.github/workflows/: ci.yml  claude-mention.yml  claude-review.yml  release-tag.yml
dev-connect-deck/: TALK_TRACK.md  ucode-field-deck.html
field-deck/: TALK_TRACK.md  app.py  ucode-field-deck.html
scripts/: fake_api_key_helper.sh  generate_image.py  test_api_key_refresh.sh
src/coding_tool_gateway/: cli.py  databricks.py  mcp.py
src/coding_tool_gateway/agents/: claude.py  codex.py  copilot.py  gemini.py  opencode.py
src/ucode/: __init__.py  agent_updates.py  bootstrap.py  budget_hooks.py  cli.py  config_io.py  databricks.py  gateway_proxy.py  launcher.py  mcp.py  mcp_proxy.py  mcp_web_search.py  model_selection.py  policies.py  proc.py  skills_download.py  state.py  telemetry.py  tracing.py  ui.py  update_check.py  usage.py  usage_hooks.py
src/ucode/agents/: __init__.py  _mlflow_proxy.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  goose.py  opencode.py  pi.py
tests/: conftest.py  test_agent_claude.py  test_agent_codex.py  test_agent_copilot.py  test_agent_cursor.py  test_agent_gemini.py  test_agent_goose.py  test_agent_opencode.py  test_agent_pi.py  test_agent_updates.py  test_agents_init.py  test_cli.py  test_config_io.py  test_databricks.py  test_e2e.py  test_e2e_tracing.py  test_e2e_uc.py  test_e2e_user_agent.py  test_gateway_proxy.py  test_launcher.py  test_mcp.py  test_mcp_proxy.py  test_mlflow_proxy.py  test_policies.py  test_proc.py  test_skills_download.py  test_state.py  test_telemetry.py  test_tracing.py  test_ui.py  test_update_check.py  test_usage.py  test_usage_hooks.py
