[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "ucode"
# Version is derived from git tags at build time (see [tool.uv-dynamic-versioning]).
# On a tag it is the plain tag (e.g. `0.1.0`); between tags it carries the commit
# count and short hash (e.g. `0.1.0+14.g93986a8`) so a reported version maps back
# to an exact commit.
dynamic = ["version"]
description = "Bootstrap Codex against a Databricks workspace with minimal setup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "databricks-sql-connector>=3.6.0",
  "questionary>=2.0.0",
  "tomlkit>=0.13.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
# Only the Claude Code tracing path needs the Python MLflow runtime; OpenCode
# and Codex trace via JS plugins. Kept out of the core deps so a plain `ucode`
# install stays lean. Enable with `uv tool install "ucode[tracing]"`.
tracing = ["mlflow[databricks]>=3.4"]

[project.scripts]
ucode = "ucode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ucode"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
# On a tagged commit: plain tag (e.g. `0.1.0`). Between tags: append the commit
# count and short hash as a local segment (e.g. `0.1.0+14.g93986a8`) so a
# reported version points back to an exact commit for bug reports.
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.g{{ commit }}{% endif %}"
# Used only when git metadata is unavailable at build time (e.g. building from a
# source archive with no `.git`). The normal install paths clone the repo, so
# this is a last-resort so builds degrade instead of hard-failing.
fallback-version = "0.0.0"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — formatter handles this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False in tests is fine
